# unixstring

./: Cargo.toml  README.md
.github/workflows/: build.yml
examples/getcwd/: Cargo.toml  main.rs
examples/stat/: Cargo.toml  main.rs
src/: as_ref.rs  error.rs  from.rs  lib.rs  memchr.rs  partial_eq.rs  try_from.rs  unix_string.rs  unixstring.rs
tests/: as_mut_ptr.rs  as_refs.rs  conversions.rs  extend_from_ptr.rs  from.rs  from_bytes.rs  into.rs  into_string.rs  into_string_unchecked.rs  len_and_cap.rs  new.rs  partial_eq.rs  ptr.rs  push_bytes.rs  push_os_str.rs  starts_with.rs  to_string_lossy.rs  try_from.rs  try_from_bytes.rs  try_from_osstring.rs  try_from_pathbuf.rs  try_from_string.rs  try_froms.rs  validate.rs
