[package]
name = "unixstring"
version = "0.2.6"
edition = "2018"
authors = ["Vinícius Rodrigues Miguel <vrmiguel99@gmail.com>"]
readme = "README.md"
description = "An FFI-friendly null-terminated byte string"
categories = ["filesystem", "text-processing", "encoding", "os::unix-apis"]
exclude = ["/.github"]
repository = "https://github.com/vrmiguel/unixstring"
license = "MIT"

[dependencies]
libc      = "0.2.103"